--- a/module_2_site/index.html
+++ b/module_2_site/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<meta charset="utf-8">
+	<title>Assigment Solution for Module 2</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	  <link rel="stylesheet" type="text/css" href="css\Mdule2.css">
+	
 </head>
 <body>
-Heloo World
+<h1>Our Menue</h1>
+<div id="container">
+    <div class="row">
+		<div class="col-lg-3 col-md-6 col-mn-12">
+			<section class="region">Beef</section>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. </p>
+    	</div>
+		<div class="col-lg-3 col-md-6 col-mn-12">
+			<section class="region">Chicken</section>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. </p>
+    	</div>
+		<div class="col-lg-3 col-md-6 col-mn-12">
+			<section class="region">Sushi</section>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. </p>
+    	</div>
+	</div>
+</div>
+
 </body>
 </html>
