--- a/module_2_site/index.html
+++ b/module_2_site/index.html
@@ -11,16 +11,16 @@
 <h1>Our Menue</h1>
 <div id="container">
     <div class="row">
-		<div class="col-lg-3 col-md-6 col-mn-12">
-			<section class="region">Chicken</section>
+		<div class="col-lg-4 col-md-6 col-mn-12">
+			<section class="region" style="background-color: #FA8CA7" >Chicken</section>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. </p>
     	</div>
-		<div class="col-lg-3 col-md-6 col-mn-12">
-			<section class="region">Beef</section>
+		<div class="col-lg-4 col-md-6 col-mn-12">
+			<section class="region" style="background-color: #D91C4B">Beef</section>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. </p>
     	</div>
-		<div class="col-lg-3 col-md-6 col-mn-12">
-			<section class="region">Sushi</section>
+		<div class="col-lg-4 col-md-6 col-mn-12">
+			<section class="region" style="background-color: #DBC038">Sushi</section>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. </p>
     	</div>
 	</div>
