--- a/module_2_site/index.html
+++ b/module_2_site/index.html
@@ -8,7 +8,7 @@
 	
 </head>
 <body>
-<h1>Our Menue</h1>
+<h1>Our Menu</h1>
 <div id="container">
 	<div class="row">
 		<div class="col-md-3 col-sm-6 col-xs-12">
