--- a/module_2_site/index.html
+++ b/module_2_site/index.html
@@ -9,28 +9,34 @@
 </head>
 <body>
 <h1>Our Menu</h1>
-<div id="container">
 	<div class="row">
-		<div class="col-md-3 col-sm-6 col-xs-12">
-			<section class="region" style="background-color: #FA8CA7" >Chicken</section>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. 
-			</p>
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="section">
+				<h2 id="chicken" class="title">Chicken </h2>
+				<p class ="description">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis.
+				</p> 
+			</div>
     	</div>
-		<div class="col-md-3 col-sm-6 col-xs-12">
-			<section class="region" style="background-color: #D91C4B">Beef</section>
-			<p>
+
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="section">
+				<h2 id="beef" class="title">Beef</h2>
+				<p class="description">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. 
-			</p>
+				</p>
+    		</div>
     	</div>
-		<div class="col-md-3 col-sm-6 col-xs-12">
-			<section class="region" style="background-color: #DBC038">Sushi</section>
-			<p>
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="section">
+				<h2 id="sushi" class="title">Sushi</h2>
+				<p class="description">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. 
 			</p>
+			</div>
+			
     	</div>
     </div>
-</div>
 
 </body>
 </html>
